# prometheus

./: .gitignore  BUILD  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/prometheus/: BUILD.bazel
cmd/promtool/: BUILD.bazel
config/: BUILD.bazel
discovery/: BUILD.bazel
discovery/aws/: BUILD.bazel
discovery/azure/: BUILD.bazel
discovery/consul/: BUILD.bazel
discovery/digitalocean/: BUILD.bazel
discovery/dns/: BUILD.bazel
discovery/eureka/: BUILD.bazel
discovery/file/: BUILD.bazel
discovery/gce/: BUILD.bazel
discovery/hetzner/: BUILD.bazel
discovery/http/: BUILD.bazel
discovery/install/: BUILD.bazel
discovery/ionos/: BUILD.bazel
discovery/kubernetes/: BUILD.bazel
discovery/legacymanager/: BUILD.bazel
discovery/linode/: BUILD.bazel
discovery/marathon/: BUILD.bazel
discovery/moby/: BUILD.bazel
discovery/nomad/: BUILD.bazel
discovery/openstack/: BUILD.bazel
discovery/puppetdb/: BUILD.bazel
discovery/refresh/: BUILD.bazel
discovery/scaleway/: BUILD.bazel
discovery/targetgroup/: BUILD.bazel
discovery/triton/: BUILD.bazel
discovery/uyuni/: BUILD.bazel
discovery/vultr/: BUILD.bazel
discovery/xds/: BUILD.bazel
discovery/zookeeper/: BUILD.bazel
documentation/examples/custom-sd/adapter/: BUILD.bazel
documentation/examples/custom-sd/adapter-usage/: BUILD.bazel
documentation/examples/remote_storage/example_write_adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/graphite/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/influxdb/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/opentsdb/: BUILD.bazel
model/exemplar/: BUILD.bazel
model/labels/: BUILD.bazel
model/metadata/: BUILD.bazel
model/relabel/: BUILD.bazel
model/rulefmt/: BUILD.bazel
model/textparse/: BUILD.bazel
model/timestamp/: BUILD.bazel
model/value/: BUILD.bazel
notifier/: BUILD.bazel
plugins/: BUILD.bazel
prompb/: BUILD.bazel
promql/: BUILD.bazel
promql/parser/: BUILD.bazel
rules/: BUILD.bazel
scrape/: BUILD.bazel
storage/: BUILD.bazel
storage/remote/: BUILD.bazel
template/: BUILD.bazel
tracing/: BUILD.bazel
tsdb/: BUILD.bazel
tsdb/agent/: BUILD.bazel
tsdb/chunkenc/: BUILD.bazel
tsdb/chunks/: BUILD.bazel
tsdb/encoding/: BUILD.bazel
tsdb/errors/: BUILD.bazel
tsdb/fileutil/: BUILD.bazel
tsdb/goversion/: BUILD.bazel
tsdb/index/: BUILD.bazel
tsdb/record/: BUILD.bazel
tsdb/test/: BUILD.bazel
tsdb/tombstones/: BUILD.bazel
tsdb/tsdbutil/: BUILD.bazel
tsdb/wal/: BUILD.bazel
util/gate/: BUILD.bazel
util/httputil/: BUILD.bazel
util/logging/: BUILD.bazel
util/modtimevfs/: BUILD.bazel
util/osutil/: BUILD.bazel
util/pool/: BUILD.bazel
util/runtime/: BUILD.bazel
util/stats/: BUILD.bazel
util/strutil/: BUILD.bazel
util/teststorage/: BUILD.bazel
util/testutil/: BUILD.bazel
util/treecache/: BUILD.bazel
web/: BUILD.bazel
web/api/v1/: BUILD.bazel
web/ui/: BUILD.bazel  package-lock.json
web/ui/module/codemirror-promql/: package.json
web/ui/react-app/: package.json
