load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "discovery",
    srcs = [
        "discovery.go",
        "manager.go",
        "registry.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":discovery",
    visibility = ["//visibility:public"],
)

go_test(
    name = "discovery_test",
    srcs = ["manager_test.go"],
    embed = [":discovery"],
    deps = [
        "//discovery/targetgroup",
        "//util/testutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
