load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "notifier",
    srcs = ["notifier.go"],
    importpath = "github.com/prometheus/prometheus/notifier",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//discovery/targetgroup",
        "//model/labels",
        "//model/relabel",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_prometheus_alertmanager//api/v2/models:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":notifier",
    visibility = ["//visibility:public"],
)

go_test(
    name = "notifier_test",
    srcs = ["notifier_test.go"],
    embed = [":notifier"],
    deps = [
        "//config",
        "//discovery/targetgroup",
        "//model/labels",
        "//model/relabel",
        "@com_github_prometheus_alertmanager//api/v2/models:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)
