load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "plugins",
    srcs = [
        "minimum.go",
        "plugins.go",
    ],
    importpath = "github.com/prometheus/prometheus/plugins",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery/aws",
        "//discovery/azure",
        "//discovery/consul",
        "//discovery/digitalocean",
        "//discovery/dns",
        "//discovery/eureka",
        "//discovery/file",
        "//discovery/gce",
        "//discovery/hetzner",
        "//discovery/http",
        "//discovery/ionos",
        "//discovery/kubernetes",
        "//discovery/linode",
        "//discovery/marathon",
        "//discovery/moby",
        "//discovery/nomad",
        "//discovery/openstack",
        "//discovery/puppetdb",
        "//discovery/scaleway",
        "//discovery/triton",
        "//discovery/uyuni",
        "//discovery/vultr",
        "//discovery/xds",
        "//discovery/zookeeper",
    ],
)

alias(
    name = "go_default_library",
    actual = ":plugins",
    visibility = ["//visibility:public"],
)
