load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "promql",
    srcs = [
        "engine.go",
        "functions.go",
        "quantile.go",
        "query_logger.go",
        "test.go",
        "value.go",
    ],
    importpath = "github.com/prometheus/prometheus/promql",
    visibility = ["//visibility:public"],
    deps = [
        "//model/exemplar",
        "//model/labels",
        "//model/timestamp",
        "//model/value",
        "//promql/parser",
        "//storage",
        "//tsdb",
        "//tsdb/chunkenc",
        "//util/stats",
        "//util/teststorage",
        "//util/testutil",
        "@com_github_edsrzf_mmap_go//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":promql",
    visibility = ["//visibility:public"],
)

go_test(
    name = "promql_test",
    srcs = [
        "bench_test.go",
        "engine_test.go",
        "functions_test.go",
        "promql_test.go",
        "query_logger_test.go",
        "test_test.go",
        "value_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":promql"],
    deps = [
        "//model/labels",
        "//model/timestamp",
        "//promql/parser",
        "//storage",
        "//util/stats",
        "//util/teststorage",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
