load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rules",
    srcs = [
        "alerting.go",
        "manager.go",
        "recording.go",
    ],
    importpath = "github.com/prometheus/prometheus/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//model/labels",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//promql",
        "//promql/parser",
        "//storage",
        "//template",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
    ],
)

alias(
    name = "go_default_library",
    actual = ":rules",
    visibility = ["//visibility:public"],
)

go_test(
    name = "rules_test",
    srcs = [
        "alerting_test.go",
        "manager_test.go",
        "recording_test.go",
    ],
    embed = [":rules"],
    deps = [
        "//model/labels",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//promql",
        "//promql/parser",
        "//storage",
        "//util/teststorage",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_goleak//:goleak",
    ],
)
