load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rules",
    srcs = [
        "alerting.go",
        "manager.go",
        "recording.go",
    ],
    importpath = "github.com/prometheus/prometheus/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//model/labels",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//notifier",
        "//promql",
        "//promql/parser",
        "//storage",
        "//template",
        "//util/strutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel//codes:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":rules",
    visibility = ["//visibility:public"],
)

go_test(
    name = "rules_test",
    srcs = [
        "alerting_test.go",
        "manager_test.go",
        "recording_test.go",
    ],
    embed = [":rules"],
    deps = [
        "//model/labels",
        "//model/relabel",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//notifier",
        "//promql",
        "//promql/parser",
        "//storage",
        "//util/teststorage",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
