load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scrape",
    srcs = [
        "manager.go",
        "scrape.go",
        "target.go",
    ],
    importpath = "github.com/prometheus/prometheus/scrape",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//discovery/targetgroup",
        "//model/exemplar",
        "//model/labels",
        "//model/metadata",
        "//model/relabel",
        "//model/textparse",
        "//model/timestamp",
        "//model/value",
        "//storage",
        "//util/osutil",
        "//util/pool",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":scrape",
    visibility = ["//visibility:public"],
)

go_test(
    name = "scrape_test",
    srcs = [
        "helpers_test.go",
        "manager_test.go",
        "scrape_test.go",
        "target_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":scrape"],
    deps = [
        "//config",
        "//discovery/targetgroup",
        "//model/exemplar",
        "//model/labels",
        "//model/metadata",
        "//model/relabel",
        "//model/textparse",
        "//model/timestamp",
        "//model/value",
        "//storage",
        "//util/teststorage",
        "//util/testutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
