load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "buffer.go",
        "fanout.go",
        "generic.go",
        "interface.go",
        "lazy.go",
        "memoized_iterator.go",
        "merge.go",
        "noop.go",
        "secondary.go",
        "series.go",
    ],
    importpath = "github.com/prometheus/prometheus/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//model/exemplar",
        "//model/labels",
        "//tsdb/chunkenc",
        "//tsdb/chunks",
        "//tsdb/errors",
        "//tsdb/tsdbutil",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":storage",
    visibility = ["//visibility:public"],
)

go_test(
    name = "storage_test",
    srcs = [
        "buffer_test.go",
        "fanout_test.go",
        "memoized_iterator_test.go",
        "merge_test.go",
        "series_test.go",
    ],
    embed = [":storage"],
    deps = [
        "//model/labels",
        "//tsdb/chunkenc",
        "//tsdb/tsdbutil",
        "//util/teststorage",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
