load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "github.com/prometheus/prometheus/template",
    visibility = ["//visibility:public"],
    deps = [
        "//promql",
        "//util/strutil",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":template",
    visibility = ["//visibility:public"],
)

go_test(
    name = "template_test",
    srcs = [
        "template_amd64_test.go",
        "template_test.go",
    ],
    embed = [":template"],
    deps = [
        "//model/labels",
        "//promql",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
