load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tracing",
    srcs = ["tracing.go"],
    importpath = "github.com/prometheus/prometheus/tracing",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.12.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_golang_google_grpc//credentials",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tracing",
    visibility = ["//visibility:public"],
)

go_test(
    name = "tracing_test",
    srcs = ["tracing_test.go"],
    data = glob(["testdata/**"]),
    embed = [":tracing"],
    deps = [
        "//config",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
    ],
)
