load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "web",
    srcs = [
        "federate.go",
        "web.go",
    ],
    importpath = "github.com/prometheus/prometheus/web",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//model/labels",
        "//model/timestamp",
        "//model/value",
        "//notifier",
        "//promql",
        "//promql/parser",
        "//rules",
        "//scrape",
        "//storage",
        "//template",
        "//tsdb",
        "//util/httputil",
        "//web/api/v1:api",
        "//web/ui",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_mwitkow_go_conntrack//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
        "@com_github_prometheus_common//expfmt:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//route:go_default_library",
        "@com_github_prometheus_common//server:go_default_library",
        "@com_github_prometheus_exporter_toolkit//web:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
        "@org_golang_x_net//netutil:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":web",
    visibility = ["//visibility:public"],
)

go_test(
    name = "web_test",
    srcs = [
        "federate_test.go",
        "web_test.go",
    ],
    embed = [":web"],
    deps = [
        "//config",
        "//model/labels",
        "//notifier",
        "//promql",
        "//rules",
        "//scrape",
        "//storage",
        "//tsdb",
        "//util/testutil",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
