load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "prometheus_lib",
    srcs = ["main.go"],
    importpath = "github.com/prometheus/prometheus/cmd/prometheus",
    visibility = ["//visibility:private"],
    deps = [
        "//config",
        "//discovery",
        "//discovery/legacymanager",
        "//discovery/targetgroup",
        "//model/exemplar",
        "//model/labels",
        "//model/metadata",
        "//model/relabel",
        "//notifier",
        "//plugins",
        "//promql",
        "//rules",
        "//scrape",
        "//storage",
        "//storage/remote",
        "//tracing",
        "//tsdb",
        "//tsdb/agent",
        "//util/logging",
        "//util/runtime",
        "//web",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_mwitkow_go_conntrack//:go_default_library",
        "@com_github_oklog_run//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//promlog:go_default_library",
        "@com_github_prometheus_common//promlog/flag:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@com_github_prometheus_exporter_toolkit//web:go_default_library",
        "@com_github_prometheus_exporter_toolkit//web/kingpinflag:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_klog_v2//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)

go_binary(
    name = "prometheus",
    embed = [":prometheus_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "prometheus_test",
    srcs = [
        "main_test.go",
        "main_unix_test.go",
        "query_log_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":prometheus_lib"],
    deps = [
        "//model/labels",
        "//notifier",
        "//rules",
        "//util/testutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
